--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation 'com.google.auth:google-auth-library-oauth2-http:1.16.0'  // Kiểm tra phiên bản mới nhất
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.16.0'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'// Kiểm tra phiên bản mới nhất
+    implementation 'org.springframework.security:spring-security-oauth2-client:6.4.1'
 
 
     // JJWT Impl - Thực thi để tạo và xác thực JWT
@@ -41,6 +42,13 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.3.3'
     implementation 'com.neovisionaries:nv-i18n:1.29'
+// https://mvnrepository.com/artifact/com.sun.mail/jakarta.mail
+
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'com.google.api-client:google-api-client:2.0.0'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+    implementation 'com.google.apis:google-api-services-gmail:v1-rev20220404-2.0.0'
+    implementation 'javax.mail:mail:1.4.7'
 
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
