--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=Project
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/works?useUnicode=true&characterEncoding=utf8mb4
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
